# jump-profiling-recipe

./: Notes.md  create_metadata.py  download_data.sh  flake.nix  flaxe.nix  paths.txt  plot_map.ipynb  pyproject.toml
inputs/: orf.json
preprocessing/: io.py  metadata.py  sphering.py
