[tool.poetry]
name = "jump-data-analysis"
version = "0.1.0"
description = ""
authors = ["Alan"]
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.9,<3.12"
numpy="1.24.4"
pandas="1.5.3"
pyarrow="11.0.0"
scikit-learn="1.3.2"
#snakemake-minimal="7.32.4"
harmonypy="0.0.10"
tqdm="4.66.2"
#awscli="2.15.53"
#pip="23.3.1"
#jq="1.7.1"
patsy="0.5.6"
statsmodels="0.14.2"
copairs = {git = "https://github.com/johnarevalo/copairs.git"}
urllib3 = "<2"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupytext = "^1.15.2"
ipdb = "^0.13.13"
ruff = "^0.5.1"
ruff-lsp = "^0.0.54"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"